[package]
name = "chisai"
version = "0.2.2"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
description = "Convert binaries into code that can be embed into your program."
license = "MIT"
documentation = "https://github.com/hbina/chisai"
repository = "https://github.com/hbina/chisai"
homepage = "https://github.com/hbina/chisai"
categories = ["command-line-utilities", "compression", "development-tools", "encoding", "parsing"]
keywords = ["xxd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
rayon = "1.3.1"
